fix(navbar) changing z-index to navbar

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -7,7 +7,7 @@
   position: sticky;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 3;
   background-color: #dc291e;
 }
 
